[package]
name = "nbarc-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3
debug=true

[dependencies]

[dev-dependencies]
rand_chacha = "0.9.0-alpha.0"
rand = "0.9.0-alpha.0"
rayon = { version = "1.8", features = [] }
