[package]
name = "mbarc-map"
version = "0.9.0"
edition = "2021"
rust-version = "1.66.1"
license = "MIT"
description = "Implementation of a Minimally-blocking, Atomic Reference Counted Map"
repository = "https://github.com/gentlecolts/mbarc-map"
readme = "README.md"
categories = ["algorithms", "concurrency", "data-structures", "game-development"]
keywords = ["map", "hashmap", "thread-safe", "mutex"]
exclude = [
	".idea/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3
debug = true

[dependencies]

[dev-dependencies]
rand_chacha = "0.9.0-alpha.0"
rand = "0.9.0-alpha.0"
rayon = { version = "1.8", features = [] }
